--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@tailwindcss/vite": "^4.0.6",
     "framer-motion": "^12.5.0",
     "gsap": "^3.12.7",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
     "motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-router-dom": "^7.1.5",
     "styled-components": "^6.1.15",
     "tailwindcss": "^4.0.6"
